--- a/packages/project-builder/package.json
+++ b/packages/project-builder/package.json
@@ -5,7 +5,8 @@
   "author": "Ethan Glover",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "bun build.ts",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "sort-package-json": "^2.10.1",
@@ -13,6 +14,7 @@
     "tsup": "^8.3.5"
   },
   "devDependencies": {
+    "@ethang/eslint-config": "workspace:^",
     "@types/node": "^22.9.0"
   }
 }
