--- a/packages/tsconfig/tsconfig.base.json
+++ b/packages/tsconfig/tsconfig.base.json
@@ -2,6 +2,7 @@
   "extends": ["@tsconfig/node-lts/tsconfig.json", "@tsconfig/strictest/tsconfig.json"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "allowJs": true
+    "allowJs": true,
+    "lib": ["DOM", "ESNext"]
   }
 }
