--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "@ethang/toolbelt",
-  "version": "4.3.1",
+  "name": "@ethang/hooks",
+  "version": "2.2.6-beta.0",
+  "description": "",
+  "repository": "https://github.com/eglove/hooks",
   "license": "ISC",
   "author": "Ethan Glover",
   "type": "module",
   "scripts": {
     "build": "bun build.ts",
-    "lint": "eslint src --fix",
-    "test": "vitest run --coverage.enabled=true",
-    "test:ui": "vitest --ui --coverage.enabled=true --open=false",
-    "test:watch": "vitest"
+    "lint": "eslint src/ --fix"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
   ],
   "dependencies": {
-    "@total-typescript/ts-reset": "^0.6.1",
+    "@ethang/toolbelt": "workspace:^",
     "lodash": "^4.17.21",
+    "react": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -25,13 +25,10 @@
     "@ethang/project-builder": "workspace:^",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
-    "@vitest/coverage-v8": "^2.1.4",
-    "@vitest/ui": "^2.1.4",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.4",
-    "vitest-fetch-mock": "^0.4.2"
+    "@types/react": "^18.3.12",
+    "typescript": "^5.6.3"
   },
   "engines": {
-    "node": ">=22"
+    "node": ">22.0"
   }
 }
