--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node-lts": "^22.0.0",
-    "@tsconfig/strictest": "^2.0.5"
+    "@tsconfig/strictest": "^2.0.5",
+    "@tsconfig/vite-react": "^3.0.2"
   }
 }
