--- a/packages/tsconfig/tsconfig.react.json
+++ b/packages/tsconfig/tsconfig.react.json
@@ -1,3 +1,3 @@
 {
-  "extends": ["./tsconfig.base.json", "@tsconfig/vite-react"]
+  "extends": ["./tsconfig.base.json", "@tsconfig/vite-react/tsconfig.json"]
 }
