--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+**/.sanity/**
+
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,node,react
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,visualstudiocode,node,react
 
