--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-**/.sanity/**
+**/.sanity/
 
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,node,react
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,visualstudiocode,node,react
