--- a/apps/studio-ethang/package.json
+++ b/apps/studio-ethang/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@ethang/eslint-config": "workspace:^",
     "@sanity/eslint-config-studio": "^4.0.0",
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.0.25",
