--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@ethang/toolbelt": "workspace:^",
+    "eslint": "^9.14.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "zod": "^3.23.8"
