--- a/packages/project-builder/package.json
+++ b/packages/project-builder/package.json
@@ -14,6 +14,9 @@
     "tsup": "^8.3.5"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0"
+    "@ethang/eslint-config": "workspace:^",
+    "@types/node": "^22.9.0",
+    "eslint": "^9.14.0",
+    "typescript-eslint": "^8.14.0"
   }
 }
