--- a/packages/toolbelt/package.json
+++ b/packages/toolbelt/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^22.9.0",
     "@vitest/coverage-v8": "^2.1.4",
     "@vitest/ui": "^2.1.4",
+    "eslint": "^9.14.0",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4",
     "vitest-fetch-mock": "^0.4.2"
