--- a/packages/project-builder/package.json
+++ b/packages/project-builder/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "sort-package-json": "^2.10.1",
     "tsc-prog": "^2.3.0",
     "tsup": "^8.3.5"
   },
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "typescript-eslint": "^8.14.0"
