--- a/apps/sterett-admin/package.json
+++ b/apps/sterett-admin/package.json
@@ -32,8 +32,7 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^19.15.2",
-    "@ethang/project-builder": "^3.0.1",
+    "@ethang/eslint-config": "workspace:^",
     "@sanity/eslint-config-studio": "^4.0.0",
     "@types/lodash": "^4.17.13",
     "eslint": "^9.14.0",
