--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0"
   }
 }
