--- a/apps/ethang-tanstack/package.json
+++ b/apps/ethang-tanstack/package.json
@@ -31,12 +31,15 @@
     "@portabletext/react": "^3.1.0",
     "@sanity/client": "^6.22.4",
     "@sanity/image-url": "^1.1.0",
+    "@tanstack/query-async-storage-persister": "^5.60.5",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.60.5",
+    "@tanstack/react-query-persist-client": "^5.60.5",
     "@tanstack/react-router": "^1.81.14",
     "@tanstack/router-devtools": "^1.81.14",
     "bignumber.js": "^9.1.2",
     "framer-motion": "^11.11.13",
+    "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "luxon": "^3.5.0",
