--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -33,6 +33,7 @@
     "@portabletext/react": "^3.1.0",
     "@sanity/client": "^6.22.4",
     "@sanity/image-url": "^1.1.0",
+    "@tanstack/query-async-storage-persister": "^5.60.5",
     "@tanstack/query-sync-storage-persister": "^5.60.5",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.60.5",
@@ -73,6 +74,7 @@
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vite-plugin-pwa": "^0.21.0"
   }
 }
