--- a/apps/convex-chat/package.json
+++ b/apps/convex-chat/package.json
@@ -3,6 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=22"
+  },
+  "browserslist": [
+    "defaults and fully supports es6-module",
+    "maintained node versions"
+  ],
   "scripts": {
     "typecheck": "tsc --noEmit",
     "dev": "concurrently \"vite --port=3001\" \"pnpx convex dev\"",
@@ -28,25 +35,40 @@
     "vite-plugin-pwa": "^0.21.0"
   },
   "dependencies": {
+    "@clerk/backend": "^1.16.4",
+    "@clerk/clerk-react": "^5.15.5",
     "@convex-dev/react-query": "0.0.0-alpha.8",
     "@legendapp/state": "^3.0.0-beta.17",
+    "@nextui-org/avatar": "^2.0.33",
+    "@nextui-org/badge": "^2.0.32",
     "@nextui-org/button": "^2.0.38",
+    "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/link": "^2.0.35",
+    "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@tanstack/query-async-storage-persister": "^5.60.5",
+    "@tanstack/react-form": "^0.36.0",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.60.5",
     "@tanstack/react-query-persist-client": "^5.60.5",
     "@tanstack/react-router": "^1.81.14",
     "@tanstack/router-devtools": "^1.81.14",
+    "@tanstack/zod-form-adapter": "^0.35.0",
     "convex": "^1.17.0",
     "framer-motion": "^11.11.13",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.460.0",
     "ms": "^2.1.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.6",
+    "svix": "^1.40.0",
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8"
   }
 }
