--- a/apps/convex-chat/package.json
+++ b/apps/convex-chat/package.json
@@ -47,6 +47,7 @@
     "@nextui-org/link": "^2.0.35",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/scroll-shadow": "^2.1.20",
     "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
