--- a/packages/markdown-generator/package.json
+++ b/packages/markdown-generator/package.json
@@ -20,8 +20,10 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@ethang/eslint-config": "workspace:^",
     "@ethang/project-builder": "workspace:^",
     "@types/lodash": "^4.17.13",
+    "eslint": "^9.14.0",
     "vitest": "^2.1.5"
   },
   "peerDependencies": {
