--- a/apps/sterett/package.json
+++ b/apps/sterett/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "convex-chat",
+  "name": "sterett",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "engines": {
     "node": ">=22"
   },
-  "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
-  ],
   "scripts": {
+    "lint": "eslint . --fix",
     "typecheck": "tsc --noEmit",
     "dev": "concurrently \"vite --port=3001\" \"pnpx convex dev\"",
     "build": "vite build",
@@ -19,10 +16,8 @@
   },
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
-    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/router-plugin": "^1.81.9",
     "@types/lodash": "^4.17.13",
-    "@types/ms": "^0.7.34",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -35,22 +30,15 @@
     "vite-plugin-pwa": "^0.21.0"
   },
   "dependencies": {
-    "@clerk/backend": "^1.18.0",
-    "@clerk/clerk-react": "^5.17.0",
     "@convex-dev/react-query": "0.0.0-alpha.8",
-    "@legendapp/state": "^3.0.0-beta.17",
-    "@nextui-org/avatar": "^2.0.33",
-    "@nextui-org/badge": "^2.0.32",
+    "@internationalized/date": "^3.6.0",
+    "@mdxeditor/editor": "^3.19.2",
     "@nextui-org/button": "^2.0.38",
-    "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/date-picker": "^2.1.8",
     "@nextui-org/input": "^2.2.5",
-    "@nextui-org/link": "^2.0.35",
-    "@nextui-org/navbar": "^2.0.37",
-    "@nextui-org/react": "^2.4.8",
-    "@nextui-org/scroll-shadow": "^2.1.20",
-    "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "@portabletext/editor": "^1.11.2",
     "@tanstack/query-async-storage-persister": "^5.60.6",
     "@tanstack/react-form": "^0.36.2",
     "@tanstack/react-query": "^5.61.0",
@@ -58,18 +46,13 @@
     "@tanstack/react-query-persist-client": "^5.61.0",
     "@tanstack/react-router": "^1.82.2",
     "@tanstack/router-devtools": "^1.82.2",
-    "@tanstack/zod-form-adapter": "^0.36.2",
     "convex": "^1.17.2",
     "framer-motion": "^11.11.13",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.460.0",
-    "ms": "^2.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-toastify": "^10.0.6",
-    "svix": "^1.41.0",
-    "tailwind-merge": "^2.5.4",
+    "react-simple-wysiwyg": "^3.2.0",
     "zod": "^3.23.8"
   }
 }
