--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,12 +9,12 @@
   "type": "module",
   "main": "eslint.config.js",
   "scripts": {
-    "build": "bun build.ts && pnpm lint",
+    "build": "pnpx tsx build.ts && pnpm lint",
     "lint": "prettier . -w"
   },
   "dependencies": {
     "@cspell/eslint-plugin": "^8.16.0",
-    "@eslint-react/eslint-plugin": "^1.16.1",
+    "@eslint-react/eslint-plugin": "^1.17.0",
     "@eslint/compat": "^1.2.3",
     "@eslint/js": "^9.14.0",
     "@eslint/json": "^0.6.0",
@@ -39,7 +39,6 @@
     "eslint-plugin-sonarjs": "2.0.4",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-unicorn": "^56.0.0",
-    "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0"
   },
   "devDependencies": {
@@ -47,7 +46,8 @@
     "@types/eslint-plugin-jsx-a11y": "^6.9.0",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.9.1",
-    "prettier": "^3.3.3"
+    "@types/node": "^22.9.2",
+    "prettier": "^3.3.3",
+    "typescript": "^5.7.2"
   }
 }
