--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
     "@portabletext/types": "^2.0.13",
+    "@react-types/shared": "^3.26.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tsconfig/strictest": "^2.0.5",
     "@tsconfig/vite-react": "^3.0.2",
