--- a/apps/ethang-tanstack/tsconfig.json
+++ b/apps/ethang-tanstack/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["../../packages/tsconfig/tsconfig.react.json"]
+  "extends": ["../../packages/tsconfig/tsconfig.react.json"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
