--- a/apps/ethang-tanstack/package.json
+++ b/apps/ethang-tanstack/package.json
@@ -19,19 +19,13 @@
     "@convex-dev/react-query": "0.0.0-alpha.8",
     "@cortex-js/compute-engine": "^0.26.4",
     "@legendapp/state": "^3.0.0-beta.17",
-    "@nextui-org/accordion": "^2.0.40",
-    "@nextui-org/avatar": "^2.0.33",
-    "@nextui-org/button": "^2.0.38",
-    "@nextui-org/image": "^2.0.32",
-    "@nextui-org/link": "^2.0.35",
-    "@nextui-org/modal": "^2.0.41",
-    "@nextui-org/navbar": "^2.0.37",
-    "@nextui-org/react": "^2.4.8",
-    "@nextui-org/spinner": "^2.0.34",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/table": "^2.0.40",
-    "@nextui-org/theme": "^2.2.11",
     "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@sanity/client": "^6.22.5",
     "@sanity/image-url": "^1.1.0",
     "@tanstack/query-async-storage-persister": "^5.60.6",
@@ -39,6 +33,7 @@
     "@tanstack/react-query-devtools": "^5.61.0",
     "@tanstack/react-query-persist-client": "^5.61.0",
     "@tanstack/react-router": "^1.82.2",
+    "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.82.2",
     "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
