--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,7 +2,7 @@
   "name": "@ethang/eslint-config",
   "version": "19.15.4",
   "repository": {
-    "url": "git+https://github.com/eglove/eslint-config-ethang.git"
+    "url": "https://github.com/eglove/ethang-monorepo/tree/master/packages/eslint-config"
   },
   "license": "ISC",
   "author": "Ethan Glover",
