--- a/apps/ethang-tanstack/package.json
+++ b/apps/ethang-tanstack/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.17.3",
     "framer-motion": "^11.12.0",
+    "hyphenation.en-us": "^0.2.1",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
@@ -48,6 +49,7 @@
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tex-linebreak": "^0.7.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
