--- a/apps/ethang-tanstack/package.json
+++ b/apps/ethang-tanstack/package.json
@@ -19,6 +19,8 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@clerk/backend": "^1.18.0",
+    "@clerk/clerk-react": "^5.17.1",
     "@convex-dev/react-query": "0.0.0-alpha.8",
     "@cortex-js/compute-engine": "^0.26.4",
     "@legendapp/state": "^3.0.0-beta.17",
@@ -48,6 +50,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-syntax-highlighter": "^15.6.1",
+    "svix": "^1.42.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tex-linebreak": "^0.7.1",
