--- a/apps/ethang-tanstack/package.json
+++ b/apps/ethang-tanstack/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "dev": "concurrently \"vite --port=3001\" \"pnpx convex dev\"",
+    "dev": "concurrently \"vite --port=3001\" \"pnpx convex dev\" \"pnpx react-scan localhost:3001\"",
     "lint": "eslint . --fix",
     "serve": "vite preview",
     "start": "vite dist",
@@ -23,11 +23,14 @@
     "@clerk/clerk-react": "^5.17.1",
     "@convex-dev/react-query": "0.0.0-alpha.8",
     "@cortex-js/compute-engine": "^0.26.4",
+    "@ethang/toolbelt": "workspace:^",
+    "@hookform/resolvers": "^3.9.1",
     "@legendapp/state": "^3.0.0-beta.17",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
@@ -49,7 +52,9 @@
     "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
+    "reactjs-tiptap-editor": "^0.1.9",
     "svix": "^1.42.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
