--- a/apps/ethang-tanstack/package.json
+++ b/apps/ethang-tanstack/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/query-async-storage-persister": "^5.62.0",
     "@tanstack/react-query": "^5.62.0",
@@ -50,11 +51,13 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "luxon": "^3.5.0",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
     "reactjs-tiptap-editor": "^0.1.9",
+    "sonner": "^1.7.0",
     "svix": "^1.42.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
