--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ sketch
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,node,react
+*storybook.log
