--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 **/.sanity/
 
-# Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,node,react
-# Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,visualstudiocode,node,react
+# Created by https://www.toptal.com/developers/gitignore/api/node,react,jetbrains+all,visualstudiocode,storybookjs
+# Edit at https://www.toptal.com/developers/gitignore?templates=node,react,jetbrains+all,visualstudiocode,storybookjs
 
 ### JetBrains+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -244,6 +244,12 @@ psd
 thumb
 sketch
 
+### StorybookJs ###
+# gitignore template for the Storybook, UI guide for front apps
+# website: https://storybook.js.org/
+
+storybook-static/
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -263,5 +269,4 @@ sketch
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,node,react
-*storybook.log
+# End of https://www.toptal.com/developers/gitignore/api/node,react,jetbrains+all,visualstudiocode,storybookjs
