--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "lint": "eslint . --fix",
+    "lint": "eslint src --fix",
     "preview": "storybook start",
     "dev": "storybook dev -p 6006 --no-open",
     "build": "storybook build"
