--- a/packages/react-components/tsconfig.json
+++ b/packages/react-components/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": ["../tsconfig/tsconfig.react.json"],
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"]
     }
   }
 }
