--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint src --fix",
     "preview": "storybook start",
     "dev": "storybook dev -p 6006 --no-open",
-    "build": "storybook build"
+    "build": "storybook build",
+    "test-storybook": "test-storybook",
+    "test-storybook:watch": "test-storybook --watch"
   },
   "engines": {
     "node": ">=22"
@@ -42,12 +44,14 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@ethang/eslint-config": "workspace:^",
+    "@storybook/addon-a11y": "8.4.6",
     "@storybook/addon-essentials": "8.4.6",
     "@storybook/addon-interactions": "8.4.6",
     "@storybook/blocks": "8.4.6",
     "@storybook/react": "8.4.6",
     "@storybook/react-vite": "8.4.6",
     "@storybook/test": "8.4.6",
+    "@storybook/test-runner": "^0.20.0",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
@@ -55,6 +59,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "axe-playwright": "^2.0.3",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
