--- a/packages/solid-components/package.json
+++ b/packages/solid-components/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
+    "cmdk-solid": "^1.1.0",
     "lodash": "^4.17.21",
     "lucide-solid": "^0.462.0",
     "motion": "^11.12.0",
