--- a/packages/tsconfig/tsconfig.base.json
+++ b/packages/tsconfig/tsconfig.base.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "allowJs": true,
-    "lib": ["DOM", "ESNext"]
+    "lib": ["DOM", "ESNext"],
+    "types": ["node", "vite/client"]
   }
 }
