--- a/packages/solid-components/package.json
+++ b/packages/solid-components/package.json
@@ -10,30 +10,30 @@
   "license": "MIT",
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
-    "@storybook/addon-a11y": "^8.4.6",
-    "@storybook/addon-essentials": "8.4.6",
-    "@storybook/addon-interactions": "8.4.6",
-    "@storybook/blocks": "8.4.6",
-    "@storybook/test": "8.4.6",
+    "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@storybook/test-runner": "^0.20.1",
     "@types/lodash": "^4.17.13",
     "autoprefixer": "^10.4.20",
     "axe-playwright": "^2.0.3",
     "eslint": "^9.16.0",
     "postcss": "^8.4.49",
-    "storybook": "8.4.6",
+    "storybook": "^8.4.7",
     "storybook-solidjs": "1.0.0-beta.6",
     "storybook-solidjs-vite": "1.0.0-beta.6",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
-    "vite": "^6.0.2",
+    "vite": "^6.0.3",
     "vite-plugin-solid": "^2.11.0"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "cmdk-solid": "^1.1.0",
     "lodash": "^4.17.21",
-    "lucide-solid": "^0.465.0",
+    "lucide-solid": "^0.468.0",
     "motion": "^11.13.1",
     "solid-js": "^1.9.3",
     "tailwind-merge": "^2.5.5"
