--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -31,8 +31,8 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.465.0",
-    "next-themes": "^0.4.3",
+    "lucide-react": "^0.468.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -45,13 +45,13 @@
   },
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
-    "@storybook/addon-a11y": "8.4.6",
-    "@storybook/addon-essentials": "8.4.6",
-    "@storybook/addon-interactions": "8.4.6",
-    "@storybook/blocks": "8.4.6",
-    "@storybook/react": "8.4.6",
-    "@storybook/react-vite": "8.4.6",
-    "@storybook/test": "8.4.6",
+    "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@storybook/test-runner": "^0.20.1",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.10.1",
@@ -64,10 +64,10 @@
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
-    "storybook": "8.4.6",
+    "storybook": "^8.4.7",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.7.2",
-    "vite": "^6.0.2"
+    "vite": "^6.0.3"
   },
   "eslintConfig": {
     "extends": [
