--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -8,7 +8,7 @@
     "build": "ng build && pnpm run process",
     "watch": "ng build --watch --configuration development",
     "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
-    "serve:ssr:ethang-angular": "node dist/ethang-angular/server/server.mjs",
+    "serve:ssr:ethang-angular": "node dist/server/server.mjs",
     "process": "node ./tools/copy-files.mjs",
     "deploy": "pnpm run build && wrangler pages deploy dist/cloudflare"
   },
