--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -7,48 +7,53 @@
     "start": "pnpm run build && wrangler pages dev dist/cloudflare --compatibility-date=2024-12-05",
     "build": "ng build && pnpm run process",
     "watch": "ng build --watch --configuration development",
-    "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
-    "serve:ssr:ethang-angular": "node dist/server/server.mjs",
+    "test": "ng test",
+    "serve:ssr:ethang-angular": "node dist/ethang-angular/server/server.mjs",
     "process": "node ./tools/copy-files.mjs",
-    "deploy": "pnpm run build && wrangler pages deploy dist/cloudflare"
+    "deploy": "pnpm run build && wrangler pages deploy dist/cloudflare",
+    "lint": "eslint src --fix"
   },
+  "engines": {
+    "node": ">=22"
+  },
+  "browserslist": [
+    "defaults and fully supports es6-module",
+    "maintained node versions"
+  ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.4",
-    "@angular/cdk": "19.0.3",
-    "@angular/common": "^19.0.4",
-    "@angular/compiler": "^19.0.4",
-    "@angular/core": "^19.0.4",
-    "@angular/forms": "^19.0.4",
-    "@angular/platform-browser": "^19.0.4",
-    "@angular/platform-browser-dynamic": "^19.0.4",
-    "@angular/platform-server": "^19.0.4",
-    "@angular/router": "^19.0.4",
-    "@angular/ssr": "^19.0.5",
-    "lucide-angular": "^0.468.0",
+    "@angular/animations": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/platform-server": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "@angular/ssr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.5",
-    "@angular/cli": "^19.0.5",
-    "@angular/compiler-cli": "^19.0.4",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
     "@cloudflare/workers-types": "^4.20241205.0",
-    "@tailwindcss/typography": "^0.5.15",
+    "@ethang/eslint-config": "workspace:^",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^22.10.2",
-    "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.22",
-    "jasmine-core": "~5.5.0",
+    "@types/node": "^18.18.0",
+    "angular-eslint": "19.0.2",
+    "eslint": "^9.16.0",
+    "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "typescript": "5.6.3",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "8.18.0",
     "wrangler": "^3.95.0",
     "xhr2": "^0.2.1"
   }
