--- a/apps/ethang-angular/tsconfig.json
+++ b/apps/ethang-angular/tsconfig.json
@@ -13,10 +13,10 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "NodeNext",
+    "module": "ES2022",
     "types": [
         "@cloudflare/workers-types/2023-07-01"
     ]
