--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -42,9 +42,12 @@
     "@angular/compiler-cli": "^19.0.0",
     "@cloudflare/workers-types": "^4.20241205.0",
     "@ethang/eslint-config": "workspace:^",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "angular-eslint": "19.0.2",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.22",
     "eslint": "^9.16.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
@@ -52,6 +55,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.18.0",
     "wrangler": "^3.95.0",
