--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint src --fix"
   },
   "engines": {
-    "node": ">=22"
+    "node": "18.17.1"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
