--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -13,6 +13,9 @@
     "deploy": "pnpm run build && wrangler pages deploy dist/cloudflare",
     "lint": "eslint src --fix"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
