--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "@angular/ssr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
