--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -33,9 +33,9 @@
     "@angular/router": "^19.0.0",
     "@angular/service-worker": "^19.0.0",
     "@angular/ssr": "^19.0.0",
-    "hyphenation.en-us": "^0.2.1",
+    "@cloudinary/ng": "^2.1.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "rxjs": "~7.8.0",
-    "tex-linebreak": "^0.7.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
