Add caching for Cloudinary images in ngsw-config.json
Configured a new data group for Cloudinary images with a performance caching strategy. The cache is limited to 50 items and a maximum age of 7 days to optimize resource loading and performance. This change ensures faster load times for frequently accessed images.

--- a/apps/ethang-angular/ngsw-config.json
+++ b/apps/ethang-angular/ngsw-config.json
@@ -26,5 +26,18 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "cloudinary-images",
+      "urls": [
+        "https://res.cloudinary.com/**"
+      ],
+      "cacheConfig": {
+        "strategy": "performance",
+        "maxSize": 50,
+        "maxAge": "7d"
+      }
+    }
   ]
 }
