--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -7,7 +7,7 @@
     "start": "pnpm run build && wrangler pages dev dist/cloudflare --compatibility-date=2024-12-05",
     "build": "ng build && pnpm run process",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false --browsers=ChromeHeadless",
     "serve:ssr:ethang-angular": "node dist/ethang-angular/server/server.mjs",
     "process": "node ./tools/copy-files.mjs",
     "deploy": "pnpm run build && wrangler pages deploy dist/cloudflare",
@@ -62,7 +62,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.18.1",
-    "wrangler": "^3.97.0",
+    "wrangler": "^3.99.0",
     "xhr2": "^0.2.1"
   }
 }
