--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,6 +13,9 @@
     "lint": "prettier . -w"
   },
   "dependencies": {
+    "@angular-eslint/eslint-plugin": "^19.0.2",
+    "@angular-eslint/eslint-plugin-template": "^19.0.2",
+    "@angular-eslint/template-parser": "^19.0.2",
     "@cspell/eslint-plugin": "^8.17.1",
     "@eslint-react/eslint-plugin": "^1.22.0",
     "@eslint/compat": "^1.2.4",
@@ -24,6 +27,7 @@
     "@tanstack/eslint-plugin-query": "^5.62.1",
     "@tanstack/eslint-plugin-router": "^1.87.6",
     "@typescript-eslint/parser": "^8.18.1",
+    "angular-eslint": "19.0.2",
     "eslint": "^9.17.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-barrel-files": "^2.1.0",
