--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -1,4 +1,5 @@
 {
+	"extends": ["../../packages/tsconfig/tsconfig.base.json"],
 	"compilerOptions": {
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 
