--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
         run: pnpm install
       - name: Install Playwright
         run: pnpx playwright install --with-deps
+      - name: Install Bun
+        run: npm i -g bun
       - name: Build
         run: pnpm run build
       - name: Run Tests
