--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install Playwright
         run: pnpx playwright install --with-deps
       - name: Install Bun
-        run: npm i -g bun
+        run: pnpm i -g bun
       - name: Build
         run: pnpm run build
       - name: Run Tests
@@ -51,9 +51,9 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "github-actions@github.com"
-      - name: Merge dev into main
+      - name: Merge dev into master
         run: |
           git fetch origin
-          git checkout main
+          git checkout master
           git merge origin/dev
-          git push origin main
+          git push origin master
