--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -21,6 +21,7 @@
     "@cloudflare/vitest-pool-workers": "^0.5.40",
     "@cloudflare/workers-types": "^4.20241224.0",
     "@ethang/eslint-config": "workspace:^",
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.13",
     "eslint": "^9.17.0",
     "typescript": "^5.5.2",
@@ -29,6 +30,8 @@
   },
   "dependencies": {
     "@ethang/toolbelt": "workspace:^",
+    "bcryptjs": "^2.4.3",
+    "jose": "^5.9.6",
     "lodash": "^4.17.21",
     "zod": "^3.24.1"
   }
