--- a/apps/ethang-angular/ngsw-config.json
+++ b/apps/ethang-angular/ngsw-config.json
@@ -4,7 +4,7 @@
   "assetGroups": [
     {
       "name": "app",
-      "installMode": "prefetch",
+      "updateMode": "lazy",
       "resources": {
         "files": [
           "/favicon.ico",
@@ -18,7 +18,6 @@
     },
     {
       "name": "assets",
-      "installMode": "lazy",
       "updateMode": "prefetch",
       "resources": {
         "files": [
@@ -28,7 +27,6 @@
     },
     {
       "name": "images",
-      "installMode": "prefetch",
       "updateMode": "prefetch",
       "resources": {
         "urls": ["https://images.ethang.dev/**"]
