--- a/apps/ethang-angular/ngsw-config.json
+++ b/apps/ethang-angular/ngsw-config.json
@@ -4,7 +4,7 @@
   "assetGroups": [
     {
       "name": "app",
-      "updateMode": "lazy",
+      "installMode": "prefetch",
       "resources": {
         "files": [
           "/favicon.ico",
@@ -18,6 +18,7 @@
     },
     {
       "name": "assets",
+      "installMode": "lazy",
       "updateMode": "prefetch",
       "resources": {
         "files": [
@@ -27,6 +28,7 @@
     },
     {
       "name": "images",
+      "installMode": "prefetch",
       "updateMode": "prefetch",
       "resources": {
         "urls": ["https://images.ethang.dev/**"]
