--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -32,8 +32,14 @@
     "@angular/router": "^19.0.5",
     "@angular/service-worker": "^19.0.5",
     "@angular/ssr": "^19.0.6",
+    "date-fns": "^4.1.0",
+    "dexie": "^4.0.10",
+    "lodash": "^4.17.21",
+    "lucide-angular": "^0.469.0",
+    "ms": "^2.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -44,7 +50,10 @@
     "@ethang/eslint-config": "workspace:^",
     "@tailwindcss/typography": "^0.5.15",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.14",
+    "@types/ms": "^0.7.34",
     "@types/node": "^18.18.0",
+    "@types/uuid": "^10.0.0",
     "angular-eslint": "19.0.2",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
