--- a/apps/ethang-angular/tsconfig.json
+++ b/apps/ethang-angular/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "lib": ["ESNext", "DOM"],
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
