--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -10,7 +10,7 @@
     "serve:ssr:ethang-angular": "node dist/ethang-angular/server/server.mjs",
     "process": "node ./tools/copy-files.mjs",
     "deploy": "pnpm run build && wrangler pages deploy dist/cloudflare",
-    "lint": "pnpx prettier src --write && eslint src --fix"
+    "lint": "prettier src --write && eslint src --fix"
   },
   "engines": {
     "node": ">=22"
@@ -67,10 +67,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.20.0",
-    "wrangler": "^3.101.0",
+    "wrangler": "^3.102.0",
     "xhr2": "^0.2.1"
   }
 }
