--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -10,7 +10,7 @@
     "build": "storybook build",
     "test-storybook": "test-storybook --browsers chromium, firefox, webkit",
     "test-storybook:watch": "test-storybook --watch",
-    "test": "pnpx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpx http-server storybook-static --port 6007 --silent\" \"pnpx wait-on tcp:127.0.0.1:6007 && pnpm test-storybook --url http://127.0.0.1:6007\""
+    "test": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"http-server storybook-static --port 6007 --silent\" \"wait-on tcp:127.0.0.1:6007 && pnpm test-storybook --url http://127.0.0.1:6007\""
   },
   "engines": {
     "node": ">=22"
@@ -26,7 +26,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tanstack/react-router": "^1.95.6",
+    "@tanstack/react-router": "^1.97.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -38,20 +38,20 @@
     "react-hook-form": "^7.54.2",
     "react-syntax-highlighter": "^15.6.1",
     "reactjs-tiptap-editor": "^0.1.14",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
-    "@storybook/addon-a11y": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/react-vite": "^8.4.7",
-    "@storybook/test": "^8.4.7",
+    "@storybook/addon-a11y": "^8.5.0",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/blocks": "^8.5.0",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-vite": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@storybook/test-runner": "^0.21.0",
     "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.2",
@@ -61,13 +61,16 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "axe-playwright": "^2.0.3",
+    "concurrently": "^9.1.2",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
+    "http-server": "^14.1.1",
     "postcss": "^8.5.1",
-    "storybook": "^8.4.7",
+    "storybook": "^8.5.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.3",
-    "vite": "^6.0.7"
+    "vite": "^6.0.7",
+    "wait-on": "^8.0.2"
   },
   "eslintConfig": {
     "extends": [
