Replace `createResponse` with `createJsonResponse` for consistency
Migrated all usages of `createResponse` to `createJsonResponse` from the centralized utility to streamline response creation. Updated relevant imports and adjusted parameters where necessary to include the request object. Also made minor formatting adjustments in various parts of the code.

--- a/apps/track/package.json
+++ b/apps/track/package.json
@@ -14,8 +14,8 @@
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
-    "lint": "eslint ./src --fix",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "lint": "pnpm cf-typegen && eslint src --fix"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.2",
