--- a/apps/comments/package.json
+++ b/apps/comments/package.json
@@ -14,7 +14,8 @@
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "lint": "pnpm cf-typegen && eslint src --fix"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.4",
