Add comment feature with authentication and WebSocket integration
Implemented a new comment feature that includes sign-in/sign-up authentication using JWT and WebSocket-based comment functionality. Refactored the codebase by splitting authentication logic into a dedicated `AuthService`, and added `CommentsSocketService` for WebSocket management. Additionally, updated dependencies and fixed type handling for enhanced functionality.

--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -13,7 +13,7 @@
     "lint": "prettier src --write && eslint src --fix"
   },
   "engines": {
-    "node": ">=22"
+    "node": ">=22.4.0"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
@@ -35,6 +35,7 @@
     "@ethang/toolbelt": "workspace:^",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-angular": "^0.473.0",
     "ms": "^2.1.3",
