--- a/apps/ethang-tanstack/package.json
+++ b/apps/ethang-tanstack/package.json
@@ -1,26 +1,11 @@
 {
-  "name": "ethang-tanstack",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "vite build",
-    "dev": "concurrently \"vite --port=3001\" \"pnpx convex dev\" \"pnpx react-scan localhost:3001\"",
-    "lint": "eslint . --fix",
-    "serve": "vite preview",
-    "start": "vite dist",
-    "typecheck": "tsc --noEmit"
-  },
-  "engines": {
-    "node": ">=22"
-  },
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
   ],
   "dependencies": {
-    "@clerk/backend": "^1.23.6",
-    "@clerk/clerk-react": "^5.22.5",
+    "@clerk/backend": "^1.23.7",
+    "@clerk/clerk-react": "^5.22.6",
     "@convex-dev/react-query": "0.0.0-alpha.8",
     "@cortex-js/compute-engine": "^0.27.0",
     "@ethang/react-components": "workspace:^",
@@ -46,7 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
-    "framer-motion": "^12.0.3",
+    "framer-motion": "^12.0.5",
     "hyphenation.en-us": "^0.2.1",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
@@ -83,5 +68,20 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.11",
     "vite-plugin-pwa": "^0.21.1"
-  }
+  },
+  "engines": {
+    "node": ">=22"
+  },
+  "name": "ethang-tanstack",
+  "private": true,
+  "scripts": {
+    "build": "vite build",
+    "dev": "concurrently \"vite --port=3001\" \"pnpx convex dev\" \"pnpx react-scan localhost:3001\"",
+    "lint": "eslint . --fix",
+    "serve": "vite preview",
+    "start": "vite dist",
+    "typecheck": "tsc --noEmit"
+  },
+  "type": "module",
+  "version": "0.0.0"
 }
