--- a/packages/project-builder/package.json
+++ b/packages/project-builder/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "@ethang/project-builder",
-  "version": "1.0.0",
-  "license": "ISC",
   "author": "Ethan Glover",
-  "type": "module",
-  "scripts": {
-    "build": "bun build.ts",
-    "lint": "eslint . --fix"
-  },
   "dependencies": {
     "lodash": "^4.17.21",
-    "sort-package-json": "^2.14.0",
     "tsc-prog": "^2.3.0",
     "tsup": "^8.3.5"
   },
@@ -20,5 +11,13 @@
     "@types/node": "^22.10.10",
     "eslint": "^9.18.0",
     "typescript-eslint": "^8.21.0"
-  }
+  },
+  "license": "ISC",
+  "name": "@ethang/project-builder",
+  "scripts": {
+    "build": "bun build.ts",
+    "lint": "eslint . --fix"
+  },
+  "type": "module",
+  "version": "1.0.0"
 }
