Update ESLint configs and add Prettier to lint script
Refactor ESLint config files for better readability and maintainability by expanding rule definitions across multiple lines. Enhance the `lint` script to include Prettier for formatting `src`. Improve documentation formatting in `README.md` for consistency.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -61,7 +61,7 @@
   },
   "scripts": {
     "build": "bun build.ts && pnpm lint",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix && prettier src --write"
   },
   "type": "module",
   "version": "21.0.0"
