Add data import/export features and enhance job tracking
Introduced data import/export functionality, enabling JSON file handling for job application records. Enhanced job application tracking by adding a rejected date field and corresponding UI updates. Refactored code for better modularity, added TypeScript utilities, and improved devtools integration.

--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -8,6 +8,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,7 @@
     "@ethang/eslint-config": "workspace:^",
     "@tanstack/router-devtools": "^1.102.1",
     "@tanstack/router-plugin": "^1.102.2",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.15",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.13.1",
