Add Clerk integration and improve job tracker functionality
Integrate Clerk authentication via `@clerk/clerk-react` to enable sign-in/sign-out functionality and enhance data sync features based on user authentication state. Refactor database access logic to centralize fetching, add sorting for interview rounds, and remove unused ESLint plugin `eslint-plugin-n` along with corresponding rules for a leaner configuration.

--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -4,6 +4,7 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.13",
     "@cortex-js/compute-engine": "^0.28.0",
     "@ethang/hooks": "workspace:2.2.6-beta.0",
     "@ethang/toolbelt": "workspace:^",
@@ -54,6 +55,7 @@
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
+    "vite-plugin-pwa": "^0.21.1",
     "wrangler": "^3.109.1"
   },
   "engines": {
