Add job-search-sync service and refactor data sync flow
Introduce a new job-search-sync service with foundational setup, including configuration and dependencies for development and deployment. Refactor the job-search app to remove Clerk integration and implement custom authentication using userStore, while optimizing local storage syncing and improving state management.

--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -4,9 +4,9 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@clerk/clerk-react": "^5.22.13",
     "@cortex-js/compute-engine": "^0.28.0",
     "@ethang/hooks": "workspace:2.2.6-beta.0",
+    "@ethang/store": "workspace:^",
     "@ethang/toolbelt": "workspace:^",
     "@heroui/react": "2.6.14",
     "@heroui/system": "2.4.7",
