Refactor to use shared schemas across apps
Replaced local type definitions with shared schemas to ensure consistency across the codebase. Added database migrations, synced auth and job-search-sync APIs, and enhanced database handling with prepared statements and shared models. Updated configuration files for compatibility with the changes.

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -29,6 +29,7 @@
     "wrangler": "^3.109.1"
   },
   "dependencies": {
+    "@ethang/schemas": "workspace:^",
     "@ethang/toolbelt": "workspace:^",
     "bcryptjs": "^3.0.0",
     "jose": "^5.9.6",
