Fix authorization header, node compatibility, and SQL query.
Updated "Authentication" header to "Authorization" for correct API requests. Corrected "node_compat" to "nodejs_compat" in the configuration file. Fixed SQL syntax by adding "set" to the update statement to prevent runtime errors.

--- a/apps/job-search-sync/wrangler.jsonc
+++ b/apps/job-search-sync/wrangler.jsonc
@@ -6,7 +6,7 @@
   "observability": {
     "enabled": true
   },
-  "node_compat": true,
+  "nodejs_compat": true,
    "placement": { "mode": "smart" },
   "d1_databases": [
     {
