--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.16",
     "@cloudflare/workers-types": "^4.20250214.0",
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.15",
     "eslint": "^9.20.1",
