--- a/apps/comments/package.json
+++ b/apps/comments/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.16",
     "@cloudflare/workers-types": "^4.20250214.0",
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@types/lodash": "^4.17.15",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.5.2",
