--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -13,7 +13,7 @@
   },
   "description": "",
   "devDependencies": {
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/html-minifier-terser": "^7.0.2",
     "@types/lodash": "^4.17.15",
