--- a/apps/extract/package.json
+++ b/apps/extract/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.16",
     "@cloudflare/workers-types": "^4.20250214.0",
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@types/lodash": "^4.17.15",
     "eslint": "^9.20.1",
     "typescript": "^5.5.2",
