--- a/apps/sterett-admin/package.json
+++ b/apps/sterett-admin/package.json
@@ -17,7 +17,7 @@
   },
   "description": "",
   "devDependencies": {
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@sanity/eslint-config-studio": "^5.0.1",
     "@types/lodash": "^4.17.15",
     "eslint": "^9.20.1",
