--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -54,7 +54,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@portabletext/types": "^2.0.13",
     "@react-types/shared": "^3.27.0",
     "@tailwindcss/typography": "^0.5.16",
