--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -2,7 +2,7 @@
     "name": "infrastructure",
     "main": "index.ts",
     "devDependencies": {
-        "@ethang/eslint-config": "workspace:^",
+        "@ethang/eslint-config": "^21.1.0",
         "@types/node": "^18",
         "eslint": "^9.17.0",
         "typescript": "^5.0.0"
