--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Ethan Glover",
   "license": "ISC",
   "devDependencies": {
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1"
   }
