--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -21,7 +21,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@ethang/project-builder": "workspace:^",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.4",
