--- a/packages/markdown-generator/package.json
+++ b/packages/markdown-generator/package.json
@@ -20,7 +20,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@ethang/project-builder": "workspace:^",
     "@types/lodash": "^4.17.15",
     "eslint": "^9.20.1",
