--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -8,7 +8,7 @@
   },
   "description": "",
   "devDependencies": {
-    "@ethang/eslint-config": "workspace:^",
+    "@ethang/eslint-config": "^21.1.0",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.4",
     "eslint": "^9.20.1"
