Update @ethang/toolbelt to version 4.3.2
Replaced workspace reference for @ethang/toolbelt with version ^4.3.2 across all package.json and lockfiles. This ensures consistent usage of the latest stable version for improved compatibility and functionality.

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@ethang/schemas": "workspace:^",
-    "@ethang/toolbelt": "workspace:^",
+    "@ethang/toolbelt": "^4.3.2",
     "bcryptjs": "^3.0.1",
     "jose": "^5.10.0",
     "lodash": "^4.17.21",
