--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -5,7 +5,7 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@ethang/toolbelt": "workspace:^",
+    "@ethang/toolbelt": "^4.3.2",
     "highlight.js": "^11.11.1",
     "html-minifier-terser": "^7.2.0",
     "lodash": "^4.17.21",
