--- a/apps/extract/package.json
+++ b/apps/extract/package.json
@@ -4,7 +4,7 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@ethang/toolbelt": "workspace:^",
+    "@ethang/toolbelt": "^4.3.2",
     "cheerio": "^1.0.0",
     "lodash": "^4.17.21"
   },
