--- a/packages/leetcode/package.json
+++ b/packages/leetcode/package.json
@@ -23,7 +23,7 @@
     "vitest": "^3.0.6"
   },
   "dependencies": {
-    "@ethang/toolbelt": "workspace:^",
+    "@ethang/toolbelt": "^4.3.2",
     "lodash": "^4.17.21"
   }
 }
