--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,7 +1,7 @@
 {
   "author": "",
   "dependencies": {
-    "@ethang/toolbelt": "workspace:^",
+    "@ethang/toolbelt": "^4.3.2",
     "lodash": "^4.17.21",
     "sort-package-json": "^2.14.0",
     "zod": "^3.24.2"
