--- a/packages/markdown-generator/package.json
+++ b/packages/markdown-generator/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@ethang/eslint-config": "^21.1.0",
-    "@ethang/project-builder": "workspace:^",
+    "@ethang/project-builder": "^3.0.2",
     "@types/lodash": "^4.17.15",
     "eslint": "^9.20.1",
     "vitest": "^3.0.6"
