--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -18,7 +18,7 @@
     "immer": "^10.1.1"
   },
   "devDependencies": {
-    "@ethang/project-builder": "workspace:^",
+    "@ethang/project-builder": "^3.0.2",
     "eslint": "^9.20.1"
   }
 }
